--- a/styles.css
+++ b/styles.css
@@ -4,19 +4,25 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: "Ubuntu", Helvetica, Arial, sans-serif;
 }
 
 /**header**/
 
 header {
-  display: flex;
-  color: #203354;
-  font-size: 25px;
+  position: fixed;
+  background-color: white;
+  width: 100%;
+  height: 65px;
 }
 
-header p {
-  font-size: 10px;
-  flex-wrap: wrap;
+.logo {
+  width: 130px;
+  height: 33px;
+  position: fixed;
+  display: flex;
+  top: 15px;
+  left: 10px;
 }
 
 header button {
@@ -34,17 +40,50 @@ header button {
   background-color: gray;
   color: white;
   padding-bottom: 80px;
+  padding-top: 50px;
+}
+
+@media only screen and (min-width: 502px){
+  .info {
+  background-image:
+  url("https://cposc.org/wp-content/uploads/2018/02/homepage-hero.jpg");
+  background-size: cover;
+  height: 700px;
+  width:100%;
+  background-color: Transparent;
+  }
 }
 
 .info h1 {
   font-size: 40px;
-  margin-top: 30px;
+  margin-top: 45px;
   margin-bottom: 140px;
   text-align: center;
+  color: white;
+  font-weight: 300;
+}
+.info h3 {
+    padding-top: 20px;
+    font-size: 14px;
+    text-transform: uppercase;
+    font-weight: 400;
+    color: white;
+}
+
+.info p {
+  color: white;
+  font-size:
+}
+
+.info .Location_Date {
+  margin-top: -8px;
+  font-size: 25px;
+  font-weight: 300;
 }
 
 .msg {
-  font-size: 20px;
+  font-size: 13px;
+  font-weight: 400;
   text-transform: uppercase;
   margin-bottom: 40px;
   text-align: center;
@@ -54,9 +93,9 @@ header button {
 .DateLoc {
   flex-direction: column;
   background-color: #778899;
-  width: 95%;
+  width: 460px;
   height: 100px;
-  padding: 25px 10px 15px 10px;
+  padding-left: 15px;
   margin: 0 auto;
   margin-bottom: 20px;
   border-radius: 10px;
@@ -64,7 +103,9 @@ header button {
 
 .img {
   float: left;
+  padding-top: 25px;
   padding-right: 10px;
+  padding-bottom: 20px;
 }
 
 /**button**/
@@ -72,13 +113,14 @@ header button {
 .tabs {
   position: fixed;
   display: flex;
+  top: 10px;
+  right: 10px;
 }
 
  button {
-   position: relative;
    cursor: pointer;
-   width: 40px;
-   height: 40px;
+   width: 45px;
+   height: 45px;
  }
 
  .menu {
@@ -92,7 +134,6 @@ header button {
  .menu li {
   list-style: none;
   border-bottom: 1px solid #FFF;
-
   padding: 0 40px 10px 20px;
   margin: 10px;
 }
@@ -115,25 +156,129 @@ button:hover .menu {
   color: gray;
   font-size: 20px;
   padding-top: 40px;
+
 }
 
 h3 {
-  font-size: 20px;
+  font-size: 22px;
   padding-bottom: 10px;
 }
 
 .AboutCPOSC p {
   padding-bottom: 40px;
 }
-/**conntect**/
+/**connect**/
+
 
 .Media {
   display: flex;
-  background-color: blue;
+  flex-direction: column;
+  background-color: #24648c;
+  padding-bottom: 50px;
+  text-align: center;
+  color: white;
+  margin: 10px;
+  border-radius: 5px;
+  max-width: 798px;
+  margin: 0 auto;
+}
+.Media .Media_links {
+  flex-direction: row;
+  margin: 0px 10px 0px 10px;
 }
 
-/**bottom**/
+.Media_connect {
+  padding: 30px 0px 40px 0px;
+  font-size: 30px;
+  text-transform: uppercase;
+  font-family: "Ubuntu", Helvetica, Arial, sans-serif;
+  font-weight: 300;
+}
+
+.Media .Media_links .Media_pic {
+  padding-right: 20px;
+}
+/**sponsor**/
+
+.sponsor {
+  display: flex;
+  flex-direction: column;
+  margin: 0px 10px;
+  padding-bottom: 40px;
+}
+
+.sponsor h3 {
+  padding-top: 30px;
+  padding-bottom: 10px;
+  font-size: 30px;
+  font-weight: 300;
+  text-transform: uppercase;
+}
+
+.sponsor p {
+  font-size: 20px;
+  color: gray;
+  padding-bottom: 40px;
+}
+.sponsor_button {
+  display: flex;
+  background-color: #768591;
+  color: white;
+  justify-content: center;
+  text-decoration: none;
+  margin: 0 auto;
+  padding: 15px 0px;
+  width: 300px;
+  text-transform: uppercase;
+}
+
+.sponsor_rank {
+  font-size: 20px;
+  font-weight: 300;
+  color: blue;
+  text-transform: uppercase;
+}
+
+.sponsor_img {
+  width: 100%;
+  height: auto;
+  padding: 10px 0px;
+}
+
+/**Code of Conduct**/
 
 .Conduct {
+  background-color: #444444;
+  color: white;
+  padding: 50px 30px 0px 30px;
+}
+
+.Conduct p {
+  padding-bottom: 100px;
+}
+
+.Conduct a {
+  text-decoration: none;
+  color: #999999;
+}
+
+.Conduct_img {
+  width: 40px;
+  height: 40px;
+  margin: 10px 20px 20px 0px;
+}
+
+/**footer**/
+
+.copywright {
   display: flex;
+  background-color: #313131;
+  color: #24648c;
+  justify-content: center;
+  padding: 40px 0px;
+}
+
+.copywright a {
+    text-decoration: none;
+    color: #768591;
 }
