--- a/styles.css
+++ b/styles.css
@@ -10,16 +10,16 @@
 /**header**/
 
 header {
-  position: fixed;
-  background-color: white;
+  position: relative;
+  background-color: rgba(42,45,36,0.9);
   width: 100%;
-  height: 65px;
+  height: 80px;
+  padding:25px 15px;
 }
 
 .logo {
   width: 130px;
   height: 33px;
-  position: fixed;
   display: flex;
   top: 15px;
   left: 10px;
@@ -37,84 +37,75 @@ header button {
 .info {
   display: flex;
   flex-direction: column;
-  background-color: gray;
-  color: white;
-  padding-bottom: 80px;
-  padding-top: 50px;
-}
-
-@media only screen and (min-width: 502px){
-  .info {
-  background-image:
-  url("https://cposc.org/wp-content/uploads/2018/02/homepage-hero.jpg");
-  background-size: cover;
+  background-color: #C7AC6D;
+  margin-top: -80px;
   height: 700px;
-  width:100%;
-  background-color: Transparent;
-  }
+  font-family: "lato","Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
 .info h1 {
   font-size: 40px;
-  margin-top: 45px;
+  margin-top: 300px;
   margin-bottom: 140px;
   text-align: center;
-  color: white;
+  color: #e5e4da;
   font-weight: 300;
 }
-.info h3 {
-    padding-top: 20px;
-    font-size: 14px;
-    text-transform: uppercase;
-    font-weight: 400;
-    color: white;
+
+.DateLoc{
+  display: flex;
+  flex-direction: column;
+}
+
+.Date {
+  width: 250px;
+  font-size: 40px;
+  padding-left: 10px;
+  border-right: solid black 1px;
+}
+
+.info_header{
+  font-size: 30px;
+}
+
+.info_header, .Location_Date {
+  width: 180px;
+ text-align: center;
+}
+
+.info_header1 {
+  display: none
+}
+
+.DateLoc .info_header {
 }
 
 .info p {
-  color: white;
+  color: black;
   font-size:
 }
 
-.info .Location_Date {
-  margin-top: -8px;
-  font-size: 25px;
-  font-weight: 300;
-}
-
-.msg {
+.info .msg {
   font-size: 13px;
   font-weight: 400;
   text-transform: uppercase;
   margin-bottom: 40px;
   text-align: center;
-  padding-bottom: 30px;
-}
-
-.DateLoc {
-  flex-direction: column;
-  background-color: #778899;
-  width: 460px;
-  height: 100px;
-  padding-left: 15px;
-  margin: 0 auto;
-  margin-bottom: 20px;
-  border-radius: 10px;
+  padding-bottom: 200px;
+  color: white;
 }
 
 .img {
-  float: left;
-  padding-top: 25px;
-  padding-right: 10px;
-  padding-bottom: 20px;
+display: none;
 }
 
 /**button**/
 
 .tabs {
-  position: fixed;
+  position: relative;
   display: flex;
-  top: 10px;
-  right: 10px;
+  justify-content: flex-end;
+  margin-top: -40px;
 }
 
  button {
@@ -126,10 +117,11 @@ header button {
  .menu {
    display: flex;
    flex-direction: column;
-   background-color: white;
+   background-color: brown;
    padding-top: 20px;
    display: none;
  }
+
 
  .menu li {
   list-style: none;
@@ -155,7 +147,7 @@ button:hover .menu {
 .p1 {
   color: gray;
   font-size: 20px;
-  padding-top: 40px;
+  padding-top: 300px;
 
 }
 
@@ -243,6 +235,12 @@ h3 {
   width: 100%;
   height: auto;
   padding: 10px 0px;
+}
+
+@media only scource and (min-width: 990px){
+  .sponsor_img {
+    width: 25%;
+  }
 }
 
 /**Code of Conduct**/
